assets/scss/global.scss
/*----------------------------------------------*\
    GLOBAL
	======

	@package paulawilson

\*----------------------------------------------*/

@use "_components.scss"as *;


/* 
 *
 * ANCHOR Body
------------------------------------------------*/
.page-home { /* body */
	background-color: var(--color-red);
}
.page-secondary { /* body */
	padding: var(--site-border-width);
	background-color: var(--color-slate);
	// temp
	min-height: 200vh;

	&:before {
		content: "";
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100vh;
		background-image: var(--gradient-page-border);
		z-index: -1;
	}
}


/* 
 *
 * ANCHOR Wrapper
------------------------------------------------*/
.page-wrapper {

	.page-secondary & {
		min-height: 200vh;
		margin-inline: auto;
		border-radius: var(--size-200);
		background-color: var(--color-sand);
		max-width: var(--wrapper-max-width);
	}
}


/* 
 *
 * ANCHOR Logo
------------------------------------------------*/
.site-logo {

	&__name {
		display: block;
		padding-inline: var(--size-100);
		font-family: var(--font-home);
		line-height: 1;
		text-transform: uppercase;
		color: var(--color-pink);
		font-variation-settings: "STRS" 50, "wdth" 50, "wght" 100;
		
		.page-home & {
			font-size: clamp(1em, 40vw, 25em);
			max-width: var(--wrapper-max-width);		
			margin-inline: auto;

			a {
				cursor: default; /* disable link hover on homepage */
			}
		}
		.page-secondary & {
			font-size: var(--size-700);
			width: 3em; /* based on the width of the text "Wilson" for right alignment */	
			margin-left: auto;
			position: relative;
			z-index: 20;
		}

		&--wilson {
			position: relative;
			top: -.1em;
			transition: top 0.3s ease-in-out;
			
			@media screen and (max-width: $nav-desktop) { // max-width!

				.site-nav--nav-open & {
					top: 0;
				}
			}
		}

		a {

			&:focus {
				outline: 0;
			}
			&:focus-visible {
				outline: 2px solid var(--color-pink);
				outline-offset: 3px;
			}
		}

		span {
			transition: color 2s ease;

			&:hover {
				transition: color .3s ease;		
				cursor: none;
				
				.page-home & {
					color: var(--color-sand);
				}
			}
		}		
	}	
}


/* 
 *
 * ANCHOR Logo Cursor Animation
------------------------------------------------*/
.cursor {
	position: absolute;
	z-index: 1000;
	width: 60px;
	user-select: none;
	pointer-events: none;
	opacity: 0;
	transition: opacity .2s ease;
	transform: translate(-50%, -50%);
	will-change: left, top;
	animation: flutter 1s ease-in-out infinite paused;

	.page-secondary & {
		width: 40px;
	}

	&.cursor--visible {
		opacity: 1;
		animation-play-state: running;
	}
	
	@keyframes flutter {
		0% {
			transform: translateY(0) translateX(0) translate3d(0, 0, 0) rotateZ(0deg);
		}
		50% {
			transform: translateY(-20px) translateX(10px) translate3d(10px, 0, 0) rotateZ(180deg);
		}
		100% {
			transform: translateY(0) translateX(0) translate3d(0, 0, 0) rotateZ(360deg);
		}
	}
}


/* 
 *
 * ANCHOR Navigation
------------------------------------------------*/
.site-nav {

	a {
		text-decoration: none;
	}

	&__nav {
		padding-block: var(--size-100);
		margin-top: calc(-1 * var(--nav-toggle-button-height) / 2);
		transition: background-color 0.1s ease-in-out;
		font-family: var(--font-serif);
		text-transform: uppercase;

		@media screen and (min-width: $nav-desktop) {
			position: relative;
			z-index: 10;
		}

		@media screen and (max-width: $nav-desktop) { // max-width!

			.site-nav--nav-open & {
				background-color: var(--color-pink);
				transition: background-color 0.2s ease-in-out 0.1s;
			}
		}
	}
	&__inner {
		display: grid;
		grid-template-rows: 0fr;
		transition: grid-template-rows 0.3s ease-in-out, padding-top 0.3s ease-in-out;

		@media screen and (max-width: $nav-desktop) { // max-width!

			.site-nav--nav-open & {
				grid-template-rows: 1fr;

				.page-secondary & {
					padding-top: var(--size-100);
				}
			}
		}

		.route-change-in-progress & {
			transition: none;
		}

		& > * { /* grid child */
			overflow: hidden;

			@media screen and (min-width: $nav-desktop) {
				overflow: visible;
			}
		}
	}
	&__main-list {
		
		@media screen and (min-width: $nav-desktop) {
			position: absolute;
			width: 100%;

			.page-home & {
				top: 0;
			}
			.page-secondary & {
				top: .65em;
			}
		}			
			
		& > ul {
			padding-inline: var(--size-100);				

			@media screen and (min-width: $nav-desktop) {
				display: flex;
				gap: clamp(.5em, 8vw, 1em);
				max-width: var(--wrapper-max-width);
				margin-inline: auto;

				.page-home & {
					padding-left: var(--size-600);
				}
			}
			@media screen and (min-width: $medium) {
				gap: clamp(1em, 8vw, 2em);
			}
			@media screen and (min-width: $large) {
				gap: clamp(1em, 8vw, 4em);
			}
			@media screen and (max-width: $nav-desktop) { // max-width!

				.site-nav--nav-open & {
					margin-bottom: var(--size-100);
				}
			}


			& > li {
				margin-bottom: var(--size-100);
			}
		}
	}
	&__main-link { /* <a> */
		display: inline-block;
		padding: var(--size-060) var(--size-090);
		color: var(--color-red);
		margin-bottom: var(--size-050);
		background-color: var(--color-sand);

		@media screen and (min-width: $nav-desktop) {
			padding: var(--size-030) var(--size-090);

			.page-secondary & {
			
				&--active {
					background-color: var(--color-red);
					color: var(--color-sand);
				}
			}
		}

		&--search {

			@media screen and (max-width: $nav-desktop) { // max-width!
				padding: var(--size-090) var(--size-090);
				border-radius: 50%;
			}
			@media screen and (min-width: $nav-desktop) {
				.page-secondary & {
					padding: var(--size-070) var(--size-090);
				}

				.page-home & {
					padding: var(--size-080) var(--size-080);					
					border-radius: 50%;
				}
			}
		}

		&:focus {
			outline: 0;
		}	

		.page-home & {

			&:focus-visible {
				outline: 2px solid var(--color-red);
				outline-offset: -2px;

				@media screen and (min-width: $nav-desktop) {
					outline: 2px solid var(--color-slate);
					outline-offset: 0;
				}
			}
		}		
		.page-secondary & {

			&:hover, &:focus-visible {
				outline: 2px solid var(--color-red);
				outline-offset: -2px;

				@media screen and (min-width: $nav-desktop) {
					outline: 1px solid var(--color-red);
					outline-offset: 0;
				}
			}
		}
	}
	&__sub-list {

		@media screen and (min-width: $nav-desktop) {
			display: none;
			position: absolute;

			&--open {
				display: block;
			}
			
			li {
				line-height: 1;
			}
		}		
	}
	&__sub-link { /* <a> */
		display: inline-block;
		padding: var(--size-040) var(--size-090);
		color: var(--color-slate);
		font-style: italic;
		margin-bottom: 2px;
		background-color: var(--color-sand);
		line-height: 1;

		@media screen and (min-width: $nav-desktop) {
			margin-bottom: -1px;
			border: 1px solid var(--color-pink);
			color: var(--color-pink);
			padding: var(--size-030) var(--size-090);
		}

		&:focus {
			outline: 0;
		}		
		&:hover, &:focus-visible {
			outline: 2px solid var(--color-slate);
			outline-offset: -2px;
			border-color: var(--color-slate);

			@media screen and (min-width: $nav-desktop) {
				border-color: var(--color-pink);
				outline: 1px solid var(--color-pink);
				outline-offset: 0;
				position: relative;
				z-index: 1;
			}
		}

	}
}
.site-nav-toggle {
	position: relative;

	.page-secondary & {
		margin-top: -1.1em;
		margin-bottom: -3em;
		transition: margin-bottom 0.3s ease-in-out;

		@media screen and (min-width: $nav-desktop) {
			margin-top: 0;
			margin-bottom: -1.75em;
		}
	}

	@media screen and (max-width: $nav-desktop) { // max-width!

		.page-secondary .site-nav--nav-open & {
			margin-bottom: 0;
		}
	}

	/* horizontal line */
	&:before { 
		content: "";
		display: block;
		height: 1.5px;
		background-color: var(--color-pink);
		position: absolute;
		top: calc(50% - .75px);
		transition: background-color 0.2s ease-in-out;
		left: 0;
		right: 0;
		
		.page-secondary & {
			left: calc(-1 * var(--site-border-width));
			right: calc(-1 * var(--site-border-width));

			@media screen and (min-width: calc(#{$wrapper-max-width} + (2 * #{$site-border-width-2}))) {
				left: calc(-1 * ( (100vw - var(--wrapper-max-width)) / 2));
				right: calc(-1 * ( (100vw - var(--wrapper-max-width)) / 2));
			}			
		}

	}
	
	&__button {
		aspect-ratio: 1/1;
		height: var(--nav-toggle-button-height);
		width: var(--nav-toggle-button-height);
		border-radius: 50%;
		display: grid;
		place-items: center;
		position: relative;
		z-index: 1;

		@media screen and (min-width: $nav-desktop) {
			display: none;
		}
	
		.page-home & {
			margin-inline: auto;
			background-color: var(--color-sand);
		}
		.page-secondary & {
			margin-left: 1em;
			background-color: var(--color-red);
		}

		svg {
			transition: rotate 0.2s ease-in-out;
			height: 90%;
			width: 90%;

			.page-home & {
				color: var(--color-red);
			}
			.page-secondary & {
				color: var(--color-sand);
			}
		}

		.site-nav--nav-open & {

			svg {
				rotate: 90deg;
			}
		}
	}	
}


/* 
 *
 * ANCHOR Search
------------------------------------------------*/
.site-search {
	background-color: var(--color-pink);
	padding: var(--size-100);
	margin-top: var(--size-300);

	display: none;

	&--open {
		display: block;

		.page-secondary & {
			position: absolute;
			margin-top: 3rem;
			left: 0;
			right: 0;		
		}
	}
}

